fix(app.css): enable overflow hidden to prevent scrolling on html and body elements

--- a/apps/mini/app/(app)/app.css
+++ b/apps/mini/app/(app)/app.css
@@ -56,7 +56,7 @@
 
 html,
 body {
-  /* overflow: hidden !important; */
+  overflow: hidden !important;
 }
 
 html {
